[package]
name = "proxyhawk-guard-runner"
version = "0.1.0"
edition = "2021"
description = "Headless ProxyHawk Guard runner for CI"

[[bin]]
name = "proxyhawk-guard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "fs"] }
url = "2.5"

[dev-dependencies]
wiremock = "0.6"
